# experimental_gcode_parser

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BACKLOG.md  CHANGELOG_AGENT.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  OODA.md  PRD.md  PROGRAM_REFERENCE.md  README.md  SPEC.md
.agents/skills/write-docs/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
bench/: gcode_bench.cpp
cmake/: gcodeConfig.cmake.in
dev/: antlr4.sh  bench.sh  build_docs_site.sh  check.sh  check_pr.sh  clang_tidy_targets.sh  lint_docs_policy.py
docs/: book.toml
docs/src/: SUMMARY.md  development_reference.md  execution_contract_review.md  execution_workflow.md  index.md  program_reference.md
docs/src/design/: exactstop_contpath_architecture.md  index.md  mcode_architecture.md  modal_strategy.md  pipeline.md  rapid_traverse_architecture.md  tool_change_architecture.md  work_offset_architecture.md
docs/src/development/: docs_policy.md  dual_agent_feature_checklist.md  dual_agent_workflow.md  gcode_text_flow.md  index.md  ooda.md  testing_reference.md  workflow.md
docs/src/product/: index.md  prd.md  spec.md
docs/src/project/: backlog.md  index.md  roadmap.md
docs/src/requirements/: gcode_execution_requirements.md  gcode_semantic_requirements.md  gcode_syntax_requirements.md  index.md
docs/superpowers/plans/: 2026-03-13-wu4-executor-state-cleanup.md  2026-03-13-wu6-diagnostics-recovery-alignment.md  2026-03-16-execution-contract-fixtures-step1.md  2026-03-19-wu11-async-execution-contract-fixtures.md  2026-03-25-doc-build-targets-slice-b.md  2026-03-25-doc-editorial-cleanup-slice-a5.md  2026-03-25-doc-information-architecture-slice-a.md  2026-03-26-requirements-subtree-split-execution.md
docs/superpowers/specs/: 2026-03-13-wu6-execution-session-recovery-design.md  2026-03-16-execution-contract-fixtures-design.md  2026-03-19-wu11-async-execution-contract-fixtures.md  2026-03-25-doc-build-targets-slice-b.md  2026-03-25-doc-editorial-cleanup-slice-a5.md  2026-03-25-doc-information-architecture-slice-a.md  2026-03-26-requirements-subtree-split-execution.md
grammar/: GCode.g4
include/gcode/: ail.h  ail_json.h  ast.h  condition_runtime.h  execution_commands.h  execution_interfaces.h  execution_runtime.h  execution_session.h  gcode_parser.h  lowering_types.h  message_diff.h  messages.h  messages_json.h  packet.h  packet_json.h  policy_types.h  runtime_status.h  session.h  streaming_execution_engine.h  subprogram_policy.h  tool_policy.h  tool_selection.h
reference/gcode/: GCode.g4
reference/hello/: HelloBaseListener.java  HelloLexer.java  HelloListener.java  HelloParser.java
src/: ail.cpp  ail.h  ail_json.cpp  ail_json.h  ast.h  ast_printer.cpp  ast_printer.h  condition_runtime.h  execution_command_builder.cpp  execution_command_builder.h  execution_commands.h  execution_contract_fixture.cpp  execution_contract_fixture.h  execution_contract_html.cpp  execution_contract_html.h  execution_contract_main.cpp  execution_contract_runner.cpp  execution_contract_runner.h  execution_instruction_dispatcher.cpp  execution_instruction_dispatcher.h  execution_interfaces.h  execution_modal_state.cpp  execution_modal_state.h  execution_session.cpp  execution_session_main.cpp  gcode_parser.cpp  gcode_parser.h  lowering_family.h  lowering_family_common.h  lowering_family_factory.cpp  lowering_family_g0.cpp  lowering_family_g0.h  lowering_family_g1.cpp  lowering_family_g1.h  lowering_family_g2.cpp  lowering_family_g2.h  lowering_family_g3.cpp  lowering_family_g3.h  lowering_family_g4.cpp  lowering_family_g4.h  (+33 more)
test/: ail_executor_tests.cpp  ail_lowering_tests.cpp  ail_tests.cpp  cli_tests.cpp  execution_contract_fixture_tests.cpp  execution_contract_html_tests.cpp  execution_contract_runner_tests.cpp  execution_session_tests.cpp  fuzz_smoke_tests.cpp  install_export_smoke.cmake.in  lowering_family_factory_tests.cpp  lowering_family_g0_tests.cpp  lowering_family_g1_tests.cpp  lowering_family_g2_tests.cpp  lowering_family_g3_tests.cpp  lowering_family_g4_tests.cpp  machine_profile_tests.cpp  message_diff_tests.cpp  messages_json_tests.cpp  messages_tests.cpp  modal_registry_tests.cpp  packet_tests.cpp  parser_tests.cpp  public_headers_tests.cpp  regression_tests.cpp  semantic_rules_tests.cpp  session_tests.cpp  streaming_execution_gmock_tests.cpp  streaming_execution_tests.cpp  streaming_tests.cpp
test/install_smoke_consumer/: CMakeLists.txt.in  main.cpp
testdata/: g1_samples.golden.txt  g1_samples.ngc  g2g3_samples.golden.txt  g2g3_samples.ngc  sample1.golden.txt  sample1.ngc
testdata/ail/: core_motion.golden.json  core_motion.ngc  failfast.golden.json  failfast.ngc
testdata/cli/: ail_debug.golden.txt  ail_json.golden.json  lower_debug.golden.txt  lower_json.golden.json  packet_debug.golden.txt  packet_json.golden.json  parse_debug.golden.txt  parse_json.golden.json
testdata/execution/: plane_switch.ngc  session_fix_suffix.ngc  session_reject.ngc
testdata/execution_contract/: README.md
testdata/execution_contract/core/: dwell_seconds_completed.events.yaml  dwell_seconds_completed.ngc  error_system_variable_read.events.yaml  fault_unresolved_target.events.yaml  fault_unresolved_target.ngc  goto_skips_line.events.yaml  if_else_branch.events.yaml  if_else_branch.ngc  if_system_variable_false_branch.events.yaml  if_system_variable_false_branch.ngc  if_system_variable_selector_false_branch.events.yaml  linear_move_block_resume.events.yaml  (+24 more)
testdata/integration/: simple_integrated_case.ngc
testdata/messages/: comments_blank.golden.json  comments_blank.ngc  g1_multiline.golden.json  g1_multiline.ngc  g4_dwell.golden.json  g4_dwell.ngc  g4_failfast.golden.json  g4_failfast.ngc  lowercase_equivalence.golden.json  lowercase_equivalence.ngc  lowering_failfast.golden.json  lowering_failfast.ngc  lowering_g2g3_failfast.golden.json  lowering_g2g3_failfast.ngc  nofilename_line_numbers.golden.json  nofilename_line_numbers.ngc
testdata/packets/: assignment_skip.golden.json  assignment_skip.ngc  core_motion.golden.json  core_motion.ngc  packet_failfast.golden.json  packet_failfast.ngc
(+58 files in other folders)
